syntax = "proto3";

message oip5 {

    option go_package = "oip5";

    message OipFive {

        record.RecordTemplateProto record_template = 1;
        RecordProto record = 2;
        Transfer transfer = 7;
        Deactivate deactivate = 8;
        Edit edit = 9;
    }

    message RecordProto {

        repeated string tags = 4;
        Payment payment = 6;
        OipDetails details = 7;
        Permissions permissions = 8;
    }

    message OipDetails {

        repeated google.protobuf.Any details = 1;
    }

    message Payment {
    }

    message Permissions {
    }

    message Transfer {
    }

    message Deactivate {
    }

    message Edit {
    }

    message record {

        option go_package = "oip5";

        message RecordTemplateProto {

            string friendly_name = 1;
            string description = 2;
            bytes Descriptor_set_proto = 4;
            fixed64 identifier = 10;
            repeated fixed64 recommended = 11;
            repeated fixed64 required = 12;
        }
    }
}

message google {

    message protobuf {

        message Any {

            string type_url = 1;
            bytes value = 2;
        }
    }
}

message oipProto {

    option go_package = "oipProto";

    message SignedMessage {

        bytes Serialized_message = 1;
        MessageTypes Message_type = 2;
        SignatureTypes Signature_type = 3;
        bytes Pub_key = 4;
        bytes Signature = 5;
    }

    enum MessageTypes {

        InvalidMessage = 0;
        OIP05 = 1;
        Historian = 2;
        Multipart = 3;
    }

    enum SignatureTypes {

        InvalidSignature = 0;
        Flo = 1;
        Btc = 2;
        Rvn = 3;
        Tx = 4;
    }
}